# Hackathon-II-The-Evolution-of-Todo-All-Phase

phase-1/Phase-1/: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.py
phase-1/Phase-1/.specify/memory/: constitution.md
phase-1/Phase-1/.specify/scripts/bash/: update-agent-context.sh
phase-1/Phase-1/history/prompts/002-phase1-extended/: 001-specify-extended-features.spec.prompt.md  002-plan-extended-features.plan.prompt.md  003-tasks-extended-features.tasks.prompt.md
phase-1/Phase-1/history/prompts/constitution/: 001-add-intermediate-advanced-levels.constitution.prompt.md
phase-1/Phase-1/specs/001-phase1-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
phase-1/Phase-1/specs/001-phase1-todo-app/checklists/: requirements.md
phase-1/Phase-1/specs/002-phase1-extended/: data-model.md  plan.md  research.md  spec.md  tasks.md
phase-1/Phase-1/src/: __init__.py  main.py
phase-1/Phase-1/src/cli/: __init__.py  commands.py  formatters.py  parser.py  ui.py
phase-1/Phase-1/src/models/: __init__.py  config.py  task.py
phase-1/Phase-1/src/services/: __init__.py  recurrence.py  task_service.py  task_store.py
phase-1/Phase-1/src/todo_app/: cli.py  main.py  models.py  services.py
phase-1/Phase-1/tests/: __init__.py  test_cli.py  test_models.py  test_services.py
phase-1/Phase-1/tests/contract/: __init__.py  test_validation.py
phase-1/Phase-1/tests/integration/: __init__.py
phase-1/Phase-1/tests/unit/: __init__.py  test_formatters.py  test_models.py  test_recurrence.py  test_task_service.py  test_task_store.py
(+366 files in other folders)
